--- a/PageObjectModel/test-output/old/Default suite/classes.html
+++ b/PageObjectModel/test-output/old/Default suite/classes.html
@@ -4,18 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.DatePickersTest</td>
+<td>tests.TableTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>another</td>
+<td>verify_tableHeading</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verify_datePicker</td>
+<td>verify_officeOfPerson</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyNames</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyOffice</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
