--- a/PageObjectModel/test-output/old/Default suite/methods-alphabetical.html
+++ b/PageObjectModel/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d1999a">  <td>23/05/06 16:43:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatePickersTest.another()[pri:0, instance:tests.DatePickersTest@67c27493]">another</td> 
-  <td>main@1762902523</td>   <td></td> </tr>
-<tr bgcolor="8d7062">  <td>23/05/06 16:42:57</td>   <td>-13946</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser()[pri:0, instance:tests.DatePickersTest@67c27493]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1762902523</td>   <td></td> </tr>
-<tr bgcolor="8d7062">  <td>23/05/06 16:43:14</td>   <td>2848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.terminate()[pri:0, instance:tests.DatePickersTest@67c27493]">&lt;&lt;terminate</td> 
-<td>&nbsp;</td>  <td>main@1762902523</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>23/05/10 19:27:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser()[pri:0, instance:tests.TableTest@72967906]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@197964393</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>23/05/10 19:27:25</td>   <td>7237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.terminate()[pri:0, instance:tests.TableTest@72967906]">&lt;&lt;terminate</td> 
+<td>&nbsp;</td>  <td>main@197964393</td>   <td></td> </tr>
+<tr bgcolor="d1999a">  <td>23/05/10 19:27:23</td>   <td>6137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TableTest.verifyNames()[pri:0, instance:tests.TableTest@72967906]">verifyNames</td> 
+  <td>main@197964393</td>   <td></td> </tr>
 </table>
