--- a/PageObjectModel/test-output/old/Default suite/methods-not-run.html
+++ b/PageObjectModel/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>tests.DatePickersTest.verify_datePicker</td></tr>
+<tr><td>tests.TableTest.verifyOffice</td></tr>
+<tr><td>tests.TableTest.verify_tableHeading</td></tr>
+<tr><td>tests.TableTest.verify_officeOfPerson</td></tr>
 </table>
